# bw-locale-generator

./: Cargo.toml  README.md  generate_yaml.py  npc_localize.py
.github/workflows/: ci.yml  release.yml
Examples/BigWigs/BfA/: Battle Of Dazaralor.yaml  BattleOfDazaralor.toml  BattleOfDazaralor.yaml  Uldir.toml  Uldir.yaml
Examples/BigWigs/Classic/: AQ40.toml  AQ40.yaml  Ahn'Qiraj.yaml
Examples/BigWigs/Dragonflight/: Aberrus.toml  Aberrus.yaml
Examples/BigWigs/Legion/: Antorus.toml  Antorus.yaml  Emerald Nightmare.yaml  Nighthold.toml  Nighthold.yaml  Nightmare.toml  Nightmare.yaml  Tomb of Sargeras.yaml  TombOfSargeras.toml  TombOfSargeras.yaml
Examples/BigWigs/MoP/: Throne of Thunder.yaml  ThroneOfThunder.toml  ThroneOfThunder.yaml
Examples/BigWigs/Shadowlands/: Castle Nathria.yaml  CastleNathria.toml  CastleNathria.yaml
Examples/BigWigs/WoD/: Blackrock Foundry.yaml  BlackrockFoundry.toml  BlackrockFoundry.yaml  Hellfire Citadel.yaml  HellfireCitadel.toml  HellfireCitadel.yaml  Highmaul.toml  Highmaul.yaml
Examples/LittleWigs/BfA/: Atal'Dazar.yaml  AtalDazar.toml  AtalDazar.yaml  Freehold.toml  Freehold.yaml  Horrific Vision Of Orgrimmar.yaml  Horrific Vision Of Stormwind.yaml  HorrificVisionOfOrgrimmar.toml  HorrificVisionOfOrgrimmar.yaml  HorrificVisionOfStormwind.toml  HorrificVisionOfStormwind.yaml  King's Rest.yaml  KingsRest.toml  KingsRest.yaml  Mechagon.toml  Mechagon.yaml  Shrine of the Storm.yaml  ShrineOfTheStorm.toml  ShrineOfTheStorm.yaml  Siege of Boralus.yaml  SiegeOfBoralus.toml  SiegeOfBoralus.yaml  Temple of Sethraliss.yaml  TempleOfSethraliss.toml  TempleOfSethraliss.yaml  The Motherlode.yaml  TheMotherlode.toml  TheMotherlode.yaml  Tol Dagor.yaml  TolDagor.toml  TolDagor.yaml  Underrot.toml  Underrot.yaml  Waycrest Manor.yaml  WaycrestManor.toml  WaycrestManor.yaml
Examples/LittleWigs/Cataclysm/: GrimBatol.toml  GrimBatol.yaml  The Vortex Pinnacle.yaml  Throne of the Tides.yaml  ThroneTides.toml  ThroneTides.yaml  VortexPinnacle.toml  VortexPinnacle.yaml
Examples/LittleWigs/Dragonflight/: Algeth'ar Academy.yaml  AlgetharAcademy.toml  AlgetharAcademy.yaml  Brackenhide Hollow.yaml  BrackenhideHollow.toml  BrackenhideHollow.yaml  Dawn of the Infinite.yaml  DawnOfTheInfinite.toml  DawnOfTheInfinite.yaml  Halls of Infusion.yaml  HallsOfInfusion.toml  HallsOfInfusion.yaml  Neltharus.toml  Neltharus.yaml  Ruby Life Pools.yaml  RubyLifePools.toml  RubyLifePools.yaml  The Azure Vault.yaml  The Nokhud Offensive.yaml  TheAzureVault.toml  TheAzureVault.yaml  TheNokhudOffensive.toml  TheNokhudOffensive.yaml  Uldaman Legacy of Tyr.yaml  UldamanLegacyOfTyr.toml  UldamanLegacyOfTyr.yaml
Examples/LittleWigs/Legion/: Assault On Violet Hold.yaml  AssaultOnVioletHold.toml  AssaultOnVioletHold.yaml  Black Rook Hold.yaml  BlackRookHold.toml  BlackRookHold.yaml  Cathedral of Eternal Night.yaml  CathedralOfEternalNight.toml  CathedralOfEternalNight.yaml  Court Of Stars.yaml  Court of Stars.yaml  CourtOfStars.toml  CourtOfStars.yaml  Darkheart Thicket.yaml  DarkheartThicket.toml  DarkheartThicket.yaml  Eye of Azshara.yaml  EyeOfAzshara.toml  EyeOfAzshara.yaml  Halls Of Valor.yaml  Halls of Valor.yaml  HallsOfValor.toml  HallsOfValor.yaml  Karazhan.toml  Karazhan.yaml  Maw of Souls.yaml  MawOfSouls.toml  MawOfSouls.yaml  Neltharions Lair.yaml  NeltharionsLair.toml  NeltharionsLair.yaml  Seat of the Triumvirate.yaml  SeatOfTheTriumvirate.toml  SeatOfTheTriumvirate.yaml  The Arcway.yaml  TheArcway.toml  TheArcway.yaml  Vault Of The Wardens.yaml  VaultOfTheWardens.toml  VaultOfTheWardens.yaml
Examples/LittleWigs/MoP/: ShadoPanMonastery.toml  ShadoPanMonastery.yaml  Temple of the Jade Serpent.yaml  TempleOfTheJadeSerpent.toml  TempleOfTheJadeSerpent.yaml
Examples/LittleWigs/Shadowlands/: De Other Side.yaml  DeOtherSide.toml  DeOtherSide.yaml  Halls of Atonement.yaml  HallsOfAtonement.toml  HallsOfAtonement.yaml  Mists of Tirna Scithe.yaml  MistsOfTirnaScithe.toml  MistsOfTirnaScithe.yaml  Plaguefall.toml  Plaguefall.yaml  Sanguine Depths.yaml  SanguineDepths.toml  SanguineDepths.yaml  Spires of Ascension.yaml  SpiresOfAscension.toml  SpiresOfAscension.yaml  Tazavesh.toml  Tazavesh.yaml  TazaveshTheVeiledMarket.toml  TazaveshTheVeiledMarket.yaml  The Necrotic Wake.yaml  TheNecroticWake.toml  TheNecroticWake.yaml  Theater Of Pain.yaml  TheaterOfPain.toml  TheaterOfPain.yaml
Examples/LittleWigs/TBC/: Magisters' Terrace.yaml  MagistersTerrace.toml  MagistersTerrace.yaml  Mana Tombs.yaml  ManaTombs.toml  ManaTombs.yaml  The Arcatraz.yaml  The Black Morass.yaml  The Shattered Halls.yaml  The Slave Pens.yaml  TheArcatraz.toml  TheArcatraz.yaml  TheBlackMorass.toml  TheBlackMorass.yaml  TheShatteredHalls.toml  TheShatteredHalls.yaml  TheSlavePens.toml  TheSlavePens.yaml
Examples/LittleWigs/WarWithin/: AraKara.toml  AraKara.yaml  CinderbrewMeadery.toml  CinderbrewMeadery.yaml  CityOfThreads.toml  CityOfThreads.yaml  DarkflameCleft.toml  DarkflameCleft.yaml  EcoDomeAldani.toml  OperationFloodgate.toml  TheDawnbreaker.toml  (+8 more)
generate_toml_from_dir/: Cargo.toml
generate_toml_from_dir/src/: main.rs
generate_toml_from_one/: Cargo.toml
generate_toml_from_one/src/: main.rs
generate_yaml_from_dir/: Cargo.toml
generate_yaml_from_dir/src/: main.rs
generate_yaml_from_one/: Cargo.toml
generate_yaml_from_one/src/: main.rs
localize_npc_names/: Cargo.toml
localize_npc_names/src/: error.rs  lib.rs  main.rs  utils.rs
(+27 files in other folders)
