[package]
name = "generate_yaml_from_dir"
version = "0.1.4"
authors = ["Velithris"]
edition = "2018"

[dependencies]
indexmap = { version = "1.3", features = ["serde-1"] }
once_cell = "1.4"
rayon = "1.3"
regex = "1"
walkdir = "2"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3.0"
