[package]
name = "generate_yaml_from_one"
version = "0.1.12"
authors = ["Velithris"]
edition = "2024"

[dependencies]
indexmap = { version = "1", features = ["serde-1"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
