[package]
name = "localize_npc_names"
version = "0.1.8"
authors = ["Velithris"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
indexmap = { version = "1", features = ["serde-1"] }
isahc = { version = "1", default-features = false, features = ["http2", "static-curl"] }
once_cell = "1"
onig = { version = "6", default-features = false }
rayon = "1"
select = "0.5"
serde = "1"
serde_yaml = "0.8"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
