[package]
name = "localize_npc_names"
version = "0.1.12"
authors = ["Velithris"]
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
indexmap = { version = "1", features = ["serde-1"] }
isahc = { version = "1", default-features = false, features = ["http2", "static-curl"] }
once_cell = "1"
onig = { version = "6", default-features = false }
rayon = "1"
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
